force-app/main/default/objects/cpm__PaymentHub_Settings__c/cpm__PaymentHub_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PaymentHub Settings</label>
</CustomObject>