force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Analytics_Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Analytics_Last_Run_Date__c</fullName>
    <label>Analytics Last Run Date</label>
    <type>Date</type>
</CustomField>