force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Can_Deploy_Mandate_Dependency__c.field-meta.xml
<CustomField>
    <fullName>cpm__Can_Deploy_Mandate_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, we now FinDock is installed with the correct dependecy</description>
    <label>Can Deploy Mandate Dependency</label>
    <type>Checkbox</type>
</CustomField>