force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Enforce_Payment_Profile_Uniqueness__c.field-meta.xml
<CustomField>
    <fullName>cpm__Enforce_Payment_Profile_Uniqueness__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enforce Payment Profile Uniqueness</label>
    <type>Checkbox</type>
</CustomField>