force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__EnforceUserMode__c.field-meta.xml
<CustomField>
    <fullName>cpm__EnforceUserMode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enforces USER_MODE for DML and SOQL queries</description>
    <label>Enforce UserMode</label>
    <type>Checkbox</type>
</CustomField>