force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Execute_Initial_Permission_Set_Adding__c.field-meta.xml
<CustomField>
    <fullName>cpm__Execute_Initial_Permission_Set_Adding__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Execute Initial Permission Set Adding</label>
    <type>Checkbox</type>
</CustomField>