force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>cpm__Mandate_Reference__c</fullName>
    <label>Mandate Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>