force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Manual_Review_Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cpm__Manual_Review_Default_Payment_Method__c</fullName>
    <label>Manual Review Default Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>