force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__QueueableGenerationEnabled__c.field-meta.xml
<CustomField>
    <fullName>cpm__QueueableGenerationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhanced performance BETA</label>
    <type>Checkbox</type>
</CustomField>