force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Re_use_existing_mandate__c.field-meta.xml
<CustomField>
    <fullName>cpm__Re_use_existing_mandate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>re-use existing mandate if available</description>
    <label>Reuse existing mandate</label>
    <type>Checkbox</type>
</CustomField>