force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Security_Service_in_Unit_Tests_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cpm__Security_Service_in_Unit_Tests_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>deprecated</description>
    <label>Security Srv in Unit Tests (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>