force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__Setup_Deploy_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Setup_Deploy_Batch_Id__c</fullName>
    <label>Setup Deploy Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>