force-app/main/default/objects/cpm__PaymentHub_Settings__c/fields/cpm__SiteURL__c.field-meta.xml
<CustomField>
    <fullName>cpm__SiteURL__c</fullName>
    <label>SiteURL</label>
    <type>Url</type>
</CustomField>